a-svc.java/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a-svc
  namespace: apps
spec:
  selector:
    appID: a-svc
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
