a-svc.java/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: a-svc
  namespace: apps
spec:
  rules:
  - host: a-svc.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: a-svc
            port:
              number: 80
